--- a/app/views/main.html
+++ b/app/views/main.html
@@ -84,8 +84,8 @@
               <td class="empty-square"></td>
               <td class="few-square"></td>
               <td class="herd-square"></td>
-              <td class="ave-square"></td>
-              <td class="ave-square"></td>
+              <td class="average-square"></td>
+              <td class="average-square"></td>
             </tr>
             <tr class="tuesday-row">
               <td>Tu</td>
@@ -93,8 +93,8 @@
               <td class="empty-square"></td>
               <td class="few-square"></td>
               <td class="herd-square"></td>
-              <td class="ave-square"></td>
-              <td class="ave-square"></td>
+              <td class="average-square"></td>
+              <td class="average-square"></td>
             </tr>
             <tr class="wednesday-row">
               <td>W</td>
@@ -103,22 +103,22 @@
               <td class="few-square"></td>
               <td class="herd-square"></td>
               <td class="few-square"></td>
-              <td class="ave-square"></td>
+              <td class="average-square"></td>
             </tr>
             <tr class="thursday-row">
               <td>Th</td>
               <td class="closed-square"></td>
               <td class="empty-square"></td>
-              <td class="ave-square"></td>
+              <td class="average-square"></td>
               <td class="herd-square"></td>
               <td class="crowded-square"></td>
-              <td class="ave-square"></td>
+              <td class="average-square"></td>
             </tr>
             <tr class="friday-row">
               <td>F</td>
               <td class="closed-square"></td>
               <td class="empty-square"></td>
-              <td class="ave-square"></td>
+              <td class="average-square"></td>
               <td class="crowded-square"></td>
               <td class="herd-square"></td>
               <td class="crowded-square"></td>
@@ -128,7 +128,7 @@
               <td class="closed-square"></td>
               <td class="empty-square"></td>
               <td class="empty-square"></td>
-              <td class="ave-square"></td>
+              <td class="average-square"></td>
               <td class="crowded-square"></td>
               <td class="herd-square"></td>
             </tr>
@@ -139,7 +139,7 @@
               <td class="empty-square"></td>
               <td class="few-square"></td>
               <td class="few-square"></td>
-              <td class="ave-square"></td>
+              <td class="average-square"></td>
             </tr>
           </table>
         </div>
@@ -159,7 +159,7 @@
               <td>M</td>
               <td class="empty-square"></td>
               <td class="few-square"></td>
-              <td class="ave-square"></td>
+              <td class="average-square"></td>
               <td class="herd-square"></td>
               <td class="herd-square"></td>
               <td class="crowded-square"></td>
@@ -176,7 +176,7 @@
             <tr class="wednesday-row">
               <td>W</td>
               <td class="few-square"></td>
-              <td class="ave-square"></td>
+              <td class="average-square"></td>
               <td class="crowded-square"></td>
               <td class="herd-square"></td>
               <td class="herd-square"></td>
@@ -186,14 +186,14 @@
               <td>Th</td>
               <td class="empty-square"></td>
               <td class="few-square"></td>
-              <td class="ave-square"></td>
+              <td class="average-square"></td>
               <td class="herd-square"></td>
               <td class="crowded-square"></td>
               <td class="herd-square"></td>
             </tr>
             <tr class="friday-row">
               <td>F</td>
-              <td class="ave-square"></td>
+              <td class="average-square"></td>
               <td class="few-square"></td>
               <td class="crowded-square"></td>
               <td class="herd-square"></td>
@@ -202,7 +202,7 @@
             </tr>
             <tr class="saturday-row">
               <td>Sa</td>
-              <td class="ave-square"></td>
+              <td class="average-square"></td>
               <td class="crowded-square"></td>
               <td class="herd-square"></td>
               <td class="crowded-square"></td>
@@ -212,11 +212,11 @@
             <tr class="sunday-row">
               <td>Su</td>
               <td class="few-square"></td>
-              <td class="ave-square"></td>
-              <td class="ave-square"></td>
+              <td class="average-square"></td>
+              <td class="average-square"></td>
               <td class="crowded-square"></td>
               <td class="crowded-square"></td>
-              <td class="ave-square"></td>
+              <td class="average-square"></td>
             </tr>
           </table>
         </div>
@@ -235,7 +235,7 @@
             <tr class="monday-row">
               <td>M</td>
               <td class="crowded-square"></td>
-              <td class="ave-square"></td>
+              <td class="average-square"></td>
               <td class="few-square"></td>
               <td class="empty-square"></td>
               <td class="closed-square"></td>
@@ -244,7 +244,7 @@
             <tr class="tuesday-row">
               <td>Tu</td>
               <td class="crowded-square"></td>
-              <td class="ave-square"></td>
+              <td class="average-square"></td>
               <td class="few-square"></td>
               <td class="empty-square"></td>
               <td class="closed-square"></td>
@@ -253,7 +253,7 @@
             <tr class="wednesday-row">
               <td>W</td>
               <td class="crowded-square"></td>
-              <td class="ave-square"></td>
+              <td class="average-square"></td>
               <td class="few-square"></td>
               <td class="empty-square"></td>
               <td class="closed-square"></td>
@@ -262,7 +262,7 @@
             <tr class="thursday-row">
               <td>Th</td>
               <td class="crowded-square"></td>
-              <td class="ave-square"></td>
+              <td class="average-square"></td>
               <td class="few-square"></td>
               <td class="few-square"></td>
               <td class="closed-square"></td>
@@ -271,7 +271,7 @@
             <tr class="friday-row">
               <td>F</td>
               <td class="crowded-square"></td>
-              <td class="ave-square"></td>
+              <td class="average-square"></td>
               <td class="few-square"></td>
               <td class="few-square"></td>
               <td class="closed-square"></td>
@@ -288,7 +288,7 @@
             </tr>
             <tr class="sunday-row">
               <td>Su</td>
-              <td class="ave-square"></td>
+              <td class="average-square"></td>
               <td class="few-square"></td>
               <td class="few-square"></td>
               <td class="closed-square"></td>
@@ -305,7 +305,7 @@
               <h5>Almost Empty</h5>
             </div>
             <div class="average">
-              <div class="ave-square color">
+              <div class="average-square color">
               </div>
               <h5>Average Traffic</h5>
             </div>
