--- a/app/views/spot.html
+++ b/app/views/spot.html
@@ -83,7 +83,7 @@
               <h5>Almost Empty</h5>
             </div>
             <div class="average">
-              <div class="ave-square color">
+              <div class="average-square color">
               </div>
               <h5>Average Traffic</h5>
             </div>
