--- a/app/views/listings.html
+++ b/app/views/listings.html
@@ -25,7 +25,7 @@
         <button class="btn add-spot">Add Spot</button>
       </a>
 
-      <div class="listing" ng-click="getSpot()" ng-repeat="spot in spots">
+      <div class="listing" ng-click="getSpot(spot.id)" ng-repeat="spot in spots">
         <div class="rank">
           <h4>{{$index + 1}}.</h4>
         </div>
