Pass spotId parameter in redirects to add-watch page and add-review page from the spot page.

--- a/app/views/spot.html
+++ b/app/views/spot.html
@@ -121,9 +121,7 @@
   <div class="reviews">
     <div class="main-col">
       <h6 class="review-nums">1-10 of 100</h6>
-      <a ng-href="#/addReview">
-        <button class="btn add-review">Add Review</button>
-      </a>
+      <button class="btn add-review" ng-click="addReview(spot.id)">Add Review</button>
 
       <hr>
 
