Add ability for listing to select based on type. Add icon selection based upon type.  Fix main page to route to correct type of listings.

--- a/app/views/listings.html
+++ b/app/views/listings.html
@@ -1,7 +1,7 @@
 <div id="listings-page">
   <div class="title-bar clearfix">
     <div class="main-col">
-      <img class="b4cm-icon" src="../images/b4cm-icon-study.png">
+      <img class="b4cm-icon" ng-src="../images/b4cm-icon-{{listings.type | lowercase}}.png">
       <h2>{{listings.type}}</h2>
       <h3>{{listings.location.city}}, {{listings.location.state_code}}</h3>
     </div>
