--- a/app/views/main.html
+++ b/app/views/main.html
@@ -10,7 +10,7 @@
       <img class="arrow-side" src="../images/arrow-right.png">
     </div>
     <div class="spots">
-      <div class="spot food" ng-click="findListings()">
+      <div class="spot food" ng-click="searchListings('Food')">
         <img class="b4cm-icon" src="../images/b4cm-icon-food.png">
         <h3>Food</h3>
         <div class="type-blurb">
@@ -18,7 +18,7 @@
           <h4>and a good meal"</h4>
         </div>
       </div>
-      <div class="spot study" ng-click="findListings()">
+      <div class="spot study" ng-click="searchListings('Study')">
         <img class="b4cm-icon" src="../images/b4cm-icon-study.png">
         <h3>Study</h3>
         <div class="type-blurb">
@@ -26,7 +26,7 @@
           <h4>without distractions"</h4>
         </div>
       </div>
-      <div class="spot social" ng-click="findListings()">
+      <div class="spot social" ng-click="searchListings('Social')">
         <img class="b4cm-icon" src="../images/b4cm-icon-social.png">
         <h3>Social</h3>
         <div class="type-blurb">
