--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -660,25 +660,29 @@ input[type='text']:focus {
     border-radius: 10px;
     padding: 10px 15px;
 
+
+    h2 {
+      margin: 0 0 10px 0;
+    }
+
     .details-left {
       display: inline-block;
-
-      h2 {
-        margin-bottom: 10px;
-      }
+      float: left;
+      max-width: 300px;
+      margin-top: -10px;
 
       h4 {
         margin-left: 10px;
       }
 
       .rating {
-        margin-top: 20px;
+        margin-top: 35px;
       }
     }
 
     .details-right {
       display: inline-block;
-      margin: 0 0 0 20px;
+      margin: -20px 0 0 20px;
 
       h3 {
         margin-bottom: 0;
@@ -695,7 +699,7 @@ input[type='text']:focus {
 
     .text-ad {
       background-color: $acc-med;
-      margin-top: 22px;
+      margin-top: -20px;
       width: 100%;
       
       a {
