Switch average color to dark text so visible against gray.

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -222,7 +222,8 @@ input[type='text']:focus {
 }
 
 .average {
-  color: $cf-average;
+  //color: $cf-average;
+  color: $text-dark;
 }
 
 .average-square {
