Add auto select current time to add watch.

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -883,8 +883,14 @@ input[type='text']:focus {
 }
 
 #add-watch-page {
-  select {
-    width: 100px;
+  .day-select {
+    width: 110px;
+  }
+  .hour-select {
+    width: 60px;
+  }
+  .meridiem-select {
+    width: 60px;
   }
 }
 
