--- a/app/views/addWatch.html
+++ b/app/views/addWatch.html
@@ -30,110 +30,15 @@
     <div class="control-group">
       <label class="control-label" for="inputHours">Time Window: </label>
       <div class="controls">
-        <select>
-          <option>12:00 am</option>
-          <option>12:30 am</option>
-          <option>1:00 am</option>
-          <option>1:30 am</option>
-          <option>2:00 am</option>
-          <option>2:30 am</option>
-          <option>3:00 am</option>
-          <option>3:30 am</option>
-          <option>4:00 am</option>
-          <option>4:30 am</option>
-          <option>5:00 am</option>
-          <option>5:30 am</option>
-          <option>6:00 am</option>
-          <option>6:30 am</option>
-          <option>7:00 am</option>
-          <option>7:30 am</option>
-          <option>8:00 am</option>
-          <option>8:30 am</option>
-          <option>9:00 am</option>
-          <option>9:30 am</option>
-          <option>10:00 pm</option>
-          <option>10:30 pm</option>
-          <option>11:00 pm</option>
-          <option>11:30 pm</option>
-          <option>12:00 pm</option>
-          <option>12:30 pm</option>
-          <option>1:00 pm</option>
-          <option>1:30 pm</option>
-          <option>2:00 pm</option>
-          <option>2:30 pm</option>
-          <option>3:00 pm</option>
-          <option>3:30 pm</option>
-          <option>4:00 pm</option>
-          <option>4:30 pm</option>
-          <option>5:00 pm</option>
-          <option>5:30 pm</option>
-          <option>6:00 pm</option>
-          <option>6:30 pm</option>
-          <option>7:00 pm</option>
-          <option>7:30 pm</option>
-          <option>8:00 pm</option>
-          <option>8:30 pm</option>
-          <option>9:00 pm</option>
-          <option>9:30 pm</option>
-          <option>10:00 pm</option>
-          <option>10:30 pm</option>
-          <option>11:00 pm</option>
-          <option>11:30 pm</option>
-        </select>
+        <select class="day-select" ng-model="startDay" ng-options="day.label for day in WEEKDAYS"></select>
+        <select class="hour-select" ng-model="startHour" ng-options="hour.label for hour in HOURS"></select>
+        <select class="meridiem-select" ng-model="startMeridiem" ng-options="meridiem.label for meridiem in MERIDIEMS"></select>
         To
-        <select>
-          <option>12:00 am</option>
-          <option>12:30 am</option>
-          <option>1:00 am</option>
-          <option>1:30 am</option>
-          <option>2:00 am</option>
-          <option>2:30 am</option>
-          <option>3:00 am</option>
-          <option>3:30 am</option>
-          <option>4:00 am</option>
-          <option>4:30 am</option>
-          <option>5:00 am</option>
-          <option>5:30 am</option>
-          <option>6:00 am</option>
-          <option>6:30 am</option>
-          <option>7:00 am</option>
-          <option>7:30 am</option>
-          <option>8:00 am</option>
-          <option>8:30 am</option>
-          <option>9:00 am</option>
-          <option>9:30 am</option>
-          <option>10:00 pm</option>
-          <option>10:30 pm</option>
-          <option>11:00 pm</option>
-          <option>11:30 pm</option>
-          <option>12:00 pm</option>
-          <option>12:30 pm</option>
-          <option>1:00 pm</option>
-          <option>1:30 pm</option>
-          <option>2:00 pm</option>
-          <option>2:30 pm</option>
-          <option>3:00 pm</option>
-          <option>3:30 pm</option>
-          <option>4:00 pm</option>
-          <option>4:30 pm</option>
-          <option>5:00 pm</option>
-          <option>5:30 pm</option>
-          <option>6:00 pm</option>
-          <option>6:30 pm</option>
-          <option>7:00 pm</option>
-          <option>7:30 pm</option>
-          <option>8:00 pm</option>
-          <option>8:30 pm</option>
-          <option>9:00 pm</option>
-          <option>9:30 pm</option>
-          <option>10:00 pm</option>
-          <option>10:30 pm</option>
-          <option>11:00 pm</option>
-          <option>11:30 pm</option>
-        </select>    
+        <select class="day-select" ng-model="stopDay" ng-options="day.label for day in WEEKDAYS"></select>
+        <select class="hour-select" ng-model="stopHour" ng-options="hour.label for hour in HOURS"></select>
+        <select class="meridiem-select" ng-model="stopMeridiem" ng-options="meridiem.label for meridiem in MERIDIEMS"></select>
       </div>
     </div>
-
 
     <div class="control-group">
       <div class="controls">
