--- a/app/views/addWatch.html
+++ b/app/views/addWatch.html
@@ -1,5 +1,5 @@
 <div id="add-watch-page">
-  <h3>Add a Herd Watch:</h3>
+  <h3>Add a Crowd Watch:</h3>
 
   <h4>Philz Coffee</h4>
   <h5>448 Forest Ave, Palo Alto</h5>
@@ -42,7 +42,7 @@
 
     <div class="control-group">
       <div class="controls">
-        <button type="submit" class="btn">Add Herd Watch</button>
+        <button type="submit" class="btn">Add Crowd Watch</button>
       </div>
     </div>
   </form>
