Add image upload html to add spot page.

--- a/app/views/addSpot.html
+++ b/app/views/addSpot.html
@@ -39,6 +39,15 @@
         <input type="text" id="inputState" placeholder="State">
       </div>
     </div>
+  
+    <div class="control-group">
+      <label class="control-label" for="imageLoader">Upload Picture</label><br/>
+      <div class="controls image-load-control">
+        <input type="file" id="imageLoader" name="imageLoader"/>
+      </div>
+      <canvas id="imageCanvas"></canvas>
+    </div>
+      <!--<canvas id="imageCanvas"></canvas>-->
 
     <div class="control-group">
       <label class="control-label">Type of Spot</label>
