--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -905,6 +905,16 @@ input[type='text']:focus {
   select {
     width: 100px;
   }
+
+  canvas {
+    display: inline-block;
+    float: right;
+    margin: -100px 200px -50px 0;
+  }
+
+  .image-load-control {
+    margin-top: -10px;
+  }
 }
 
 /******************
