--- a/app/views/addSpot.html
+++ b/app/views/addSpot.html
@@ -43,11 +43,10 @@
     <div class="control-group">
       <label class="control-label" for="imageLoader">Upload Picture</label><br/>
       <div class="controls image-load-control">
-        <input type="file" id="imageLoader" name="imageLoader"/>
+        <input type="file" id="imageLoader" accept="image/*" image="image2" resize-max-height="100" resize-max-width="100" resize-quality="0.7" />
+        <img ng-show="image2" ng-src="{{image2.resized.dataURL}}"/>
       </div>
-      <canvas id="imageCanvas"></canvas>
     </div>
-      <!--<canvas id="imageCanvas"></canvas>-->
 
     <div class="control-group">
       <label class="control-label">Type of Spot</label>
