--- a/app/views/addSpot.html
+++ b/app/views/addSpot.html
@@ -61,13 +61,13 @@
       <label class="control-label">Type of Spot</label>
       <div class="controls">
         <label class="checkbox inline">
-          <input type="checkbox" id="inlineCheckbox1" value="food">Food
+          <input type="checkbox" id="revTypeFood" ng-model="food" value="food">Food
         </label>
         <label class="checkbox inline">
-          <input type="checkbox" id="inlineCheckbox2" value="study">Study
+          <input type="checkbox" id="revTypeStudy" ng-model="study" value="study">Study
         </label>
         <label class="checkbox inline">
-          <input type="checkbox" id="inlineCheckbox3" value="social">Social
+          <input type="checkbox" id="revTypeSocial" ng-model="social" value="social">Social
         </label>
       </div>
     </div>
