--- a/app/views/addSpot.html
+++ b/app/views/addSpot.html
@@ -73,121 +73,18 @@
     </div>
 
     <div class="control-group">
-      <label class="control-label" for="inputHours">Hours</label>
+      <label class="control-label" for="inputHours">Hours: </label>
       <div class="controls">
-        <select>
-          <option>Mon</option>
-          <option>Tue</option>
-          <option>Wed</option>
-          <option>Thr</option>
-          <option>Fri</option>
-          <option>Sat</option>
-          <option>Sun</option>
-        </select>
-        <select>
-          <option>12:00 am</option>
-          <option>12:30 am</option>
-          <option>1:00 am</option>
-          <option>1:30 am</option>
-          <option>2:00 am</option>
-          <option>2:30 am</option>
-          <option>3:00 am</option>
-          <option>3:30 am</option>
-          <option>4:00 am</option>
-          <option>4:30 am</option>
-          <option>5:00 am</option>
-          <option>5:30 am</option>
-          <option>6:00 am</option>
-          <option>6:30 am</option>
-          <option>7:00 am</option>
-          <option>7:30 am</option>
-          <option>8:00 am</option>
-          <option>8:30 am</option>
-          <option>9:00 am</option>
-          <option>9:30 am</option>
-          <option>10:00 pm</option>
-          <option>10:30 pm</option>
-          <option>11:00 pm</option>
-          <option>11:30 pm</option>
-          <option>12:00 pm</option>
-          <option>12:30 pm</option>
-          <option>1:00 pm</option>
-          <option>1:30 pm</option>
-          <option>2:00 pm</option>
-          <option>2:30 pm</option>
-          <option>3:00 pm</option>
-          <option>3:30 pm</option>
-          <option>4:00 pm</option>
-          <option>4:30 pm</option>
-          <option>5:00 pm</option>
-          <option>5:30 pm</option>
-          <option>6:00 pm</option>
-          <option>6:30 pm</option>
-          <option>7:00 pm</option>
-          <option>7:30 pm</option>
-          <option>8:00 pm</option>
-          <option>8:30 pm</option>
-          <option>9:00 pm</option>
-          <option>9:30 pm</option>
-          <option>10:00 pm</option>
-          <option>10:30 pm</option>
-          <option>11:00 pm</option>
-          <option>11:30 pm</option>
-        </select>
-        <select>
-          <option>12:00 am</option>
-          <option>12:30 am</option>
-          <option>1:00 am</option>
-          <option>1:30 am</option>
-          <option>2:00 am</option>
-          <option>2:30 am</option>
-          <option>3:00 am</option>
-          <option>3:30 am</option>
-          <option>4:00 am</option>
-          <option>4:30 am</option>
-          <option>5:00 am</option>
-          <option>5:30 am</option>
-          <option>6:00 am</option>
-          <option>6:30 am</option>
-          <option>7:00 am</option>
-          <option>7:30 am</option>
-          <option>8:00 am</option>
-          <option>8:30 am</option>
-          <option>9:00 am</option>
-          <option>9:30 am</option>
-          <option>10:00 pm</option>
-          <option>10:30 pm</option>
-          <option>11:00 pm</option>
-          <option>11:30 pm</option>
-          <option>12:00 pm</option>
-          <option>12:30 pm</option>
-          <option>1:00 pm</option>
-          <option>1:30 pm</option>
-          <option>2:00 pm</option>
-          <option>2:30 pm</option>
-          <option>3:00 pm</option>
-          <option>3:30 pm</option>
-          <option>4:00 pm</option>
-          <option>4:30 pm</option>
-          <option>5:00 pm</option>
-          <option>5:30 pm</option>
-          <option>6:00 pm</option>
-          <option>6:30 pm</option>
-          <option>7:00 pm</option>
-          <option>7:30 pm</option>
-          <option>8:00 pm</option>
-          <option>8:30 pm</option>
-          <option>9:00 pm</option>
-          <option>9:30 pm</option>
-          <option>10:00 pm</option>
-          <option>10:30 pm</option>
-          <option>11:00 pm</option>
-          <option>11:30 pm</option>
-        </select>
-        <a class="clickable" ng-click="addHours()">Add Hours</a>        
+        <select class="day-select" ng-model="openDay" ng-options="day.label for day in WEEKDAYS"></select>
+        <select class="hour-select" ng-model="openHour" ng-options="hour.label for hour in HOURS"></select>
+        <select class="meridiem-select" ng-model="openMeridiem" ng-options="meridiem.label for meridiem in MERIDIEMS"></select>
+        To
+        <select class="day-select" ng-model="closeDay" ng-options="day.label for day in WEEKDAYS"></select>
+        <select class="hour-select" ng-model="closeHour" ng-options="hour.label for hour in HOURS"></select>
+        <select class="meridiem-select" ng-model="closeMeridiem" ng-options="meridiem.label for meridiem in MERIDIEMS"></select>
+        <a class="clickable" ng-click="addHours()">Add Hours</a>
       </div>
     </div>
-
 
     <div class="control-group">
       <div class="controls">
