--- a/app/views/addSpot.html
+++ b/app/views/addSpot.html
@@ -15,6 +15,12 @@
         <a class="clickable" ng-click="yelpIdHelp()">What's This?</a>
       </div>
     </div>
+
+    <div class="yelp-id-info" ng-show="yelpHelpShow">
+      <p>If you go to a business's Yelp page, the id is the part of the url with the business name and location.</p>
+      <p>So if you search for Philz coffee in Palo Alto and go to the first listing, the URL is:<br><span class="url">http://www.yelp.com/biz/philz-coffee-palo-alto-2</span> <br>and the Yelp business ID is:<br><span class="url">philz-coffee-palo-alto-2</span>.  <p>There may be a query term after the ID such as <span class="query">#query:coffe</span> if you had found the listing after search for coffee in Palo Alto.  Ignore this hash '<span class="query">#</span>' and anything after it.</p>
+    </div>
+
     <div class="control-group">
       <label class="control-label" for="inputAddress">Address</label>
       <div class="controls">
