Move add spot button up.  Clean up code. Add comments.

--- a/app/views/addSpot.html
+++ b/app/views/addSpot.html
@@ -98,7 +98,7 @@
         <span class="to">To</span> 
         {{time.close_day.label}} {{time.close_hour.label}} {{time.close_meridiem.label}}
       </h5>
-      <a class="clickable" ng-click="deleteHour($index)">delete</a>
+      <a class="clickable" ng-click="deleteHours($index)">delete</a>
     </div>
 
     <div class="control-group">
