--- a/app/views/addSpot.html
+++ b/app/views/addSpot.html
@@ -3,9 +3,9 @@
 
   <form class="form-horizontal">
     <div class="control-group">
-      <label class="control-label" for="inputName">Name</label>
+      <label class="control-label" for="spotName">Name</label>
       <div class="controls">
-        <input type="text" id="inputName" ng-model="name" placeholder="Name">
+        <input class="{{validForm.name}}" type="text" id="spotName" ng-model="name" placeholder="Name">
       </div>
     </div>
     <div class="control-group">
@@ -22,27 +22,27 @@
     </div>
 
     <div class="control-group">
-      <label class="control-label" for="inputAddress">Address</label>
+      <label class="control-label" for="spotAddress">Address</label>
       <div class="controls">
-        <input type="text" id="inputAddress" ng-model="address" placeholder="Address">
+        <input type="text" id="spotAddress" ng-model="address" placeholder="Address">
       </div>
     </div>
     <div class="control-group">
-      <label class="control-label" for="inputCity">City</label>
+      <label class="control-label" for="spotCity">City</label>
       <div class="controls">
-        <input type="text" id="inputCity" ng-model="city" placeholder="City">
+        <input type="text" id="spotCity" ng-model="city" placeholder="City">
       </div>
     </div>
     <div class="control-group">
-      <label class="control-label" for="inputZip">Zip</label>
+      <label class="control-label" for="spotZip">Zip</label>
       <div class="controls">
-        <input type="text" id="inputZip" ng-model="postal_code" placeholder="Zip">
+        <input type="text" id="spotZip" ng-model="postal_code" placeholder="Zip">
       </div>
     </div>
     <div class="control-group">
-      <label class="control-label" for="inputState">State</label>
+      <label class="control-label" for="spotState">State</label>
       <div class="controls">
-        <input type="text" id="inputState" ng-model="state_code" placeholder="State">
+        <input type="text" id="spotState" ng-model="state_code" placeholder="State">
       </div>
     </div>
 
