--- a/app/views/addSpot.html
+++ b/app/views/addSpot.html
@@ -67,13 +67,13 @@
       <label class="control-label">Type of Spot</label>
       <div class="controls">
         <label class="checkbox inline">
-          <input type="checkbox" id="revTypeFood" ng-model="food" value="food">Food
+          <input type="checkbox" id="revTypeFood" ng-model="food" value="food"><span class="{{validForm.type}}">Food</span>
         </label>
         <label class="checkbox inline">
-          <input type="checkbox" id="revTypeStudy" ng-model="study" value="study">Study
+          <input type="checkbox" id="revTypeStudy" ng-model="study" value="study"><span class="{{validForm.type}}">Study</span>
         </label>
         <label class="checkbox inline">
-          <input type="checkbox" id="revTypeSocial" ng-model="social" value="social">Social
+          <input type="checkbox" id="revTypeSocial" ng-model="social" value="social"><span class="{{validForm.type}}">Social</span>
         </label>
       </div>
     </div>
