--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -206,6 +206,14 @@ input[type='text']:focus {
   border-color: $comp1-dark;
 }
 
+.none {
+  color: $text-dark;
+}
+
+.none-square {
+  background-color: $cf-average;
+}
+
 .empty {
   color: $cf-empty;
 }
@@ -707,7 +715,7 @@ input[type='text']:focus {
 
     .text-ad {
       background-color: $acc-med;
-      margin-top: -20px;
+      //margin-top: -20px;
       width: 100%;
       
       a {
