--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -266,7 +266,7 @@ input[type='text']:focus {
 }
 
 .empty-square, .few-square, .average-square,
-.crowded-square, .herd-square, .closed-square {
+.crowded-square, .herd-square, .closed-square, .none-square {
   border: 1px solid black;
 }
 
@@ -1037,6 +1037,7 @@ input[type='text']:focus {
 
   h5 {
     margin: 10px 0 0 0;
+    width: 165px;
   }
 
   td {
