--- a/app/views/spot.html
+++ b/app/views/spot.html
@@ -93,6 +93,11 @@
               </div>
               <h5>Herd Alert</h5>
             </div>
+            <div class="none">
+              <div class="none-square color">
+              </div>
+              <h5>No Watches</h5>
+            </div>
           </div>
           <br>
           <div class="row2">
