--- a/app/views/spot.html
+++ b/app/views/spot.html
@@ -50,6 +50,7 @@
         draggable="true"
         fit="false"
         events="eventsProperty"
+        refresh="!isMapElementHidden"
         style="height: 260px; width: 280; border: 1px solid;">
       </div> 
     </div>
