--- a/app/views/listings.html
+++ b/app/views/listings.html
@@ -3,7 +3,7 @@
     <div class="main-col">
       <img class="b4cm-icon" ng-src="../images/b4cm-icon-{{listings.type | lowercase}}.png">
       <h2>{{listings.type}}</h2>
-      <h3>{{listings.location.city}}, {{listings.location.state_code}}</h3>
+      <h3>{{listings.location}}</h3>
     </div>
     <div class="side-col">
       <div class="ad-book">
