--- a/app/views/listings.html
+++ b/app/views/listings.html
@@ -24,7 +24,7 @@
       <a  ng-href="#/addSpot">
         <button class="btn add-spot">Add Spot</button>
       </a>
-
+      <h2 ng-show="noSpots">No spots of this type for your search area.  Help us out and add a spot!</h2>
       <div class="listing" ng-click="getSpot(spot.id)" ng-repeat="spot in spots">
         <div class="rank">
           <h4>{{$index + 1}}.</h4>
