--- a/app/views/listings.html
+++ b/app/views/listings.html
@@ -20,7 +20,7 @@
   <div class="page">
 
     <div class="listings main-col">
-      <h6>1-10 of 100</h6>
+      <h6 ng-hide="noSpots">1-10 of 100</h6>
       <a  ng-href="#/addSpot">
         <button class="btn add-spot">Add Spot</button>
       </a>
@@ -58,7 +58,7 @@
         <hr>
       </div>
 
-      <div class="more">
+      <div class="more" ng-hide="noSpots">
         <a>More Results</a>
       </div>
     </div>
