Fix google maps non-display issue on listings page.  Was passing in address instead of lat and long for center position.  Still issue with markers displaying.

--- a/app/views/listings.html
+++ b/app/views/listings.html
@@ -3,7 +3,7 @@
     <div class="main-col">
       <img class="b4cm-icon" ng-src="../images/b4cm-icon-{{listings.type | lowercase}}.png">
       <h2>{{listings.type}}</h2>
-      <h3>{{listings.location}}</h3>
+      <h3>{{listings.displayAddress}}</h3>
     </div>
     <div class="side-col">
       <div class="ad-book">
