--- a/app/views/listings.html
+++ b/app/views/listings.html
@@ -74,6 +74,7 @@
         draggable="true"
         fit="false"
         events="eventsProperty"
+        refresh="!isMapElementHidden"
         style="height: 300px; width: 280; border: 1px solid;">
       </div> 
     </div>
