--- a/app/views/signup.html
+++ b/app/views/signup.html
@@ -1,8 +1,7 @@
 <div id="sign-up">
 
-  <div class="b4cm-signup span5">
-    <div class="logo"></div>
-    <h4>Signup with Before Critical Mass</h4> 
+  <div class="b4cm-signup">
+    <h4>Signup with Crowdabout:</h4> 
     <form class="form-horizontal">
       <div class="control-group">
         <label class="control-label" for="inputEmail">Email</label>
@@ -24,30 +23,20 @@
     </form>
   </div>
 
-  <div class="span2">
-    <h4>OR</h4>
-  </div>
-
-  <div class="3rd-party-signup span5">
-    <h4>Signup using another account</h4>
+  <div class="third-party-signup">
+    <h4>Or sign-in using another account</h4>
     <div>
-      <div class="login-method">
-        <div class="icon"></div>
-        <h5>Facebook</h5>
+      <div class="login-method facebook">
+        <a><div class="icon"></div>Facebook</a>
       </div>
-      <div class="login-method">
-        <div class="icon"></div>
-        <h5>Twitter</h5>
+      <div class="login-method twitter">
+        <a><div class="icon"></div>Twitter</a>
       </div>
-    </div>
-    <div>
-      <div class="login-method">
-        <div class="icon"></div>
-        <h5>Github</h5>
+      <div class="login-method github">
+        <a><div class="icon"></div>Github</a>
       </div>
-      <div class="login-method">
-        <div class="icon"></div>
-        <h5>Persona</h5>
+      <div class="login-method persona">
+        <a><div class="icon"></div>Persona</a>
       </div>
     </div>  
   </div>
