Add signup button to controller.

--- a/app/views/signup.html
+++ b/app/views/signup.html
@@ -17,7 +17,7 @@
       </div>
       <div class="control-group">
         <div class="controls">
-          <button type="submit" class="btn">Sign Up</button>
+          <button type="submit" class="btn" ng-click="signup()">Sign Up</button>
         </div>
       </div>
     </form>
