--- a/app/views/signup.html
+++ b/app/views/signup.html
@@ -6,13 +6,13 @@
       <div class="control-group">
         <label class="control-label" for="inputEmail">Email</label>
         <div class="controls">
-          <input type="text" id="inputEmail" placeholder="Email">
+          <input type="text" id="inputEmail" placeholder="Email" ng-model="email">
         </div>
       </div>
       <div class="control-group">
         <label class="control-label" for="inputPassword">Password</label>
         <div class="controls">
-          <input type="password" id="inputPassword" placeholder="Password">
+          <input type="password" id="inputPassword" placeholder="Password" ng-model="password">
         </div>
       </div>
       <div class="control-group">
