--- a/app/views/signin.html
+++ b/app/views/signin.html
@@ -1,40 +1,42 @@
 <div id="sign-in">
 
   <div class="b4cm-signin">
-    <div class="logo"></div>
-    <h4>Signin with Before Critical Mass</h4> 
-    <form class="form-inline">
-      <input type="text" class="input-small" placeholder="Email">
-      <input type="password" class="input-small" placeholder="Password">
-      <label class="checkbox">
-        <input type="checkbox"> Remember me
-      </label>
-      <button type="submit" class="btn">Sign in</button>
+    <h4>Sign In with Crowdabout:</h4> 
+    <form class="form-horizontal">
+      <div class="control-group">
+        <label class="control-label" for="inputEmail">Email</label>
+        <div class="controls">
+          <input type="text" id="inputEmail" placeholder="Email" ng-model="email">
+        </div>
+      </div>
+      <div class="control-group">
+        <label class="control-label" for="inputPassword">Password</label>
+        <div class="controls">
+          <input type="password" id="inputPassword" placeholder="Password" ng-model="password">
+        </div>
+      </div>
+      <div class="control-group">
+        <div class="controls">
+          <button type="submit" class="btn" ng-click="signup()">Sign In</button>
+        </div>
+      </div>
     </form>
   </div>
 
-  <div>
-    <h4>OR</h4>
-  </div>
-
-  <div class="3rd-party-signin">
-    <h4>Signin using another account</h4>
+  <div class="third-party-signup">
+    <h4>Or sign-in using another account</h4>
     <div>
-      <div class="login-method">
-        <div class="icon"></div>
-        <h5>Facebook</h5>
+      <div class="login-method facebook">
+        <a><div class="icon"></div>Facebook</a>
       </div>
-      <div class="login-method">
-        <div class="icon"></div>
-        <h5>Twitter</h5>
+      <div class="login-method twitter">
+        <a><div class="icon"></div>Twitter</a>
       </div>
-      <div class="login-method">
-        <div class="icon"></div>
-        <h5>Github</h5>
+      <div class="login-method github">
+        <a><div class="icon"></div>Github</a>
       </div>
-      <div class="login-method">
-        <div class="icon"></div>
-        <h5>Persona</h5>
+      <div class="login-method persona">
+        <a><div class="icon"></div>Persona</a>
       </div>
     </div>  
   </div>
