--- a/app/views/signup.html
+++ b/app/views/signup.html
@@ -1,7 +1,7 @@
 <div id="sign-up">
 
   <div class="b4cm-signup">
-    <h4>Signup with Crowdabout:</h4> 
+    <h4>Sign Up with Crowdabout:</h4> 
     <form class="form-horizontal">
       <div class="control-group">
         <label class="control-label" for="inputEmail">Email</label>
