--- a/app/views/signin.html
+++ b/app/views/signin.html
@@ -17,7 +17,7 @@
       </div>
       <div class="control-group">
         <div class="controls">
-          <button type="submit" class="btn" ng-click="signup()">Sign In</button>
+          <button type="submit" class="btn" ng-click="signIn('email')">Sign In</button>
         </div>
       </div>
     </form>
