--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -338,6 +338,10 @@ input[type='text']:focus {
       margin-top: -10px;
     }
   }
+
+  .signout:hover {
+    cursor: pointer;
+  }
 }
 
 /******************
