Add spot name and address to addReview page.

--- a/app/views/addReview.html
+++ b/app/views/addReview.html
@@ -1,8 +1,8 @@
 <div id="add-review-page">
   <h3>Add a Review for:</h3>
 
-  <h4>Philz Coffee</h4>
-  <h5>448 Forest Ave, Palo Alto</h5>
+  <h4>{{spot.name}}</h4>
+    <h5>{{spot.location.address}}, {{spot.location.city}}</h5>
   <form class="form-horizontal">
 
     <div class="control-group">
