Add display name to signup page.

--- a/app/views/signup.html
+++ b/app/views/signup.html
@@ -4,6 +4,12 @@
     <h4>Sign Up with Crowdabout:</h4> 
     <form class="form-horizontal">
       <div class="control-group">
+        <label class="control-label" for="inputDisplayName">Display Name</label>
+        <div class="controls">
+          <input type="text" id="inputDisplayName" placeholder="Display Name" ng-model="name">
+        </div>
+      </div>
+      <div class="control-group">
         <label class="control-label" for="inputEmail">Email</label>
         <div class="controls">
           <input type="text" id="inputEmail" placeholder="Email" ng-model="email">
