Check that review is filled out.

--- a/app/views/addReview.html
+++ b/app/views/addReview.html
@@ -30,7 +30,7 @@
     <div class="control-group">
       <label class="control-label" for="inputWriteup">Write up</label>
       <div class="controls">
-        <textarea id="inputWriteup" placeholder="Your review"></textarea>
+        <textarea id="inputWriteup" placeholder="Your review" ng-model="writeup"></textarea>
       </div>
     </div>
 
