--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -767,6 +767,11 @@ input[type='text']:focus {
       margin-top: 15px;
       width: 640px;
     }
+
+    img {
+      height: 40px;
+      width: 40px;
+    }
   }
 
   .review-nums {
