Fix bug with shrinking side column image.

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -768,9 +768,11 @@ input[type='text']:focus {
       width: 640px;
     }
 
-    img {
-      height: 40px;
-      width: 40px;
+    .main-col {
+      img {
+        height: 40px;
+        width: 40px;
+      }
     }
   }
 
