Make user image size specific to user image.

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -768,7 +768,7 @@ input[type='text']:focus {
       width: 640px;
     }
 
-    .main-col {
+    .user {
       img {
         height: 40px;
         width: 40px;
