--- a/app/views/spot.html
+++ b/app/views/spot.html
@@ -127,7 +127,7 @@
 
   <div class="reviews">
     <div class="main-col">
-      <h6 class="review-nums">1-10 of 100</h6>
+      <h6 class="review-nums">1-{{reviewsDisplayedCount}} of {{spot.review_count}}</h6>
       <button class="btn add-review" ng-click="addReview(spot.id)">Add Review</button>
 
       <hr>
